--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@ function closeForm() {
       <section class="colored-sec" id="title">
           <div class="container-fluid">
               <nav class="navbar navbar-expand-md navbar-dark">
-                <a class="navbar-brand" href="">Krash IT</a>
+                <a class="navbar-brand" href=""><img class="logo" src="images/logo.png"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
                   <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <div class="collapse navbar-collapse text-right" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ml-auto">
                       <li class="nav-item">
                             <a class="nav-link" href="">Home</a>
                       </li>
-                      <li class="nav-item">
+                      <!-- <li class="nav-item">
                            <a class="nav-link" href="#shop">Shop</a>
                       </li>
                       <div class="dropdown show">
@@ -68,9 +68,9 @@ function closeForm() {
                           <a class="dropdown-item" href="">Books</a>
                           <a class="dropdown-item" href="clothing">Clothing</a>
                         </div>
-                      </div>
+                      </div> -->
                       <li class="nav-item">
-                        <a class="nav-link" href="register">Register</a>
+                        <a class="nav-link" href="/register">Register</a>
                       </li>
                       <li>
                         <a class="nav-link" href=""><i class="fas fa-shopping-cart"></i></a>
